--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "require": {
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
-        "getcandy/candy-client-php": "dev-master",
-        "getcandy/candy-api": "dev-master",
-        "getcandy/candy-hub": "dev-master",
+        "getcandy/candy-client-php": "0.*",
+        "getcandy/candy-api": "0.*",
+        "getcandy/candy-hub": "0.*",
         "itsgoingd/clockwork": "^2.1",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0"
